--- a/research.html
+++ b/research.html
@@ -234,7 +234,7 @@ var STYLE_PREFIX = 'wsite';
   </div>
   <div id="footer">
     <div id="footer-right">
-      The views expressed on this website are mine. No responsibility for them should be attributed to the Bank of Canada.
+      The views expressed on this website are solely the author's. No responsibility for them should be attributed to the author's affiliated organizations.
     </div>
     <div class="clear"></div>
   </div>
