--- a/research.html
+++ b/research.html
@@ -201,9 +201,24 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:left;">
   
-  &ldquo;<!--<a target="_blank" href="https://doi.org/10.1016/j.euroecorev.2017.04.008">-->Using Nonparametric Copulas to Measure Crude Oil Price Co-movements</a>,&rdquo; 
+  &ldquo;<!--<a target="_blank" href="">-->Consumer Credit Usage in Canada during the Coronavirus Pandemic</a>,&rdquo; 
+  with Lealand Morin, Harry J. Paarsch, and <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a><br />
+  &emsp;<em>Canadian Journal of Economics</em>, forthcoming.<br /><br />
+  
+  &ldquo;<a target="_blank" href="https://doi.org/10.1108/S0731-905320200000042015">Interconnectedness through the Lens of Consumer Credit Markets</a>,&rdquo;<br />
+  &emsp;<em>The Econometrics of Networks (Advances in Econometrics, Vol. 42)</em>, Emerald Publishing Limited, pages 315-333, October 2020.<br /><br /> 
+  
+  &ldquo;<a target="_blank" href="https://doi.org/10.1515/jem-2020-0012">Econometrics Pedagogy and Cloud Computing:  Training the Next Generation of Economists and Data Scientists</a>,&rdquo; 
+  with Danielle V. Handel, <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>, <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>, and Carson H. Rea,<br />
+  &emsp;<em>Journal of Econometric Methods</em>, vol. 10(1), pages 89–102, October, 2020.<br /><br />
+  
+  &ldquo;<a target="_blank" href="https://doi.org/10.1353/eco.2019.0009">Productivity, Reallocation, and Distortions:  Evidence from Firm-Level Data</a>,&rdquo; 
   with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>,<br />
-  &emsp;<em>Energy Economics</em>, forthcoming.<br /><br />
+  &emsp;<em>Economia – Journal of LACEA</em>, vol. 20(1), pages 83-110, October 2019.<br /><br />
+  
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.eneco.2018.05.022">Using Nonparametric Copulas to Measure Crude Oil Price Co-movements</a>,&rdquo; 
+  with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>,<br />
+  &emsp;<em>Energy Economics</em>, vol. 82 pages 211-223, August 2019.<br /><br />
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.euroecorev.2017.04.008">Tax-deferred Saving Accounts: Heterogeneity and Policy Reforms</a>,&rdquo; <br />
   &emsp;<em>European Economic Review</em>, vol. 97, pages 26-41, August 2017.<br /><br />
