--- a/research.html
+++ b/research.html
@@ -181,7 +181,16 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:left;">
 
-&ldquo;<a href="http://pages.iu.edu/~kphuynh/rsch/hhj_ecu.html">Reallocation, Productivity, and the Ecuadorian Economic Crisis: Evidence from Firm-Level Data</a>&rdquo; with <a href="http://mypage.iu.edu/%7Ekphuynh/" target="_blank">Kim P. Huynh</a> and <a href="http://mypage.iu.edu/%7Edjachoch/" target="_blank">David T. Jacho-Chavez</a>.
+&ldquo;We Didn't Start the Fire! The Effects of a Natural Disaster on Consumer Financial Distress,&rdquo; with Kim P. Huynh, David T. Jacho-Chavez, and Genevieve Vallee.
+<br /><br />
+  
+&ldquo;A Flexible Framework for Intervention Analysis Applied to Credit-Card Usage during the CoronavirusPandemic,&rdquo; with Lealand Morin, Harry J. Paarsch, and Kim P. Huynh.
+<br /><br />
+  
+&ldquo;Don't Lend So Close to Me:  Payday Lending Spillover Effects on Formal Credit,&rdquo; with Sheisha Kulkarni, Sahil Raina, Barry Scholnick.
+<br /><br />
+  
+&ldquo;Identifying and Estimating Social Effects in a MultilayeredLinear-in-Means Model,&rdquo; with Alexandra Manta, Kim P. Huynh, and David T. Jacho-Chavez.
 <br /><br />
 
 &ldquo;<a target="_blank" href="https://ideas.repec.org/p/bca/bocawp/16-24.html">Housing and Tax-deferred Retirement Accounts</a>&rdquo; with Jie Zhou.
@@ -202,7 +211,7 @@ var STYLE_PREFIX = 'wsite';
 <div class="paragraph" style="text-align:left;">
   
   &ldquo;<!--<a target="_blank" href="">-->Consumer Credit Usage in Canada during the Coronavirus Pandemic</a>,&rdquo; 
-  with Lealand Morin, Harry J. Paarsch, and <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a><br />
+  with Lealand Morin, Harry J. Paarsch, and <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>,<br /> 
   &emsp;<em>Canadian Journal of Economics</em>, forthcoming.<br /><br />
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1108/S0731-905320200000042015">Interconnectedness through the Lens of Consumer Credit Markets</a>,&rdquo;<br />
