--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Anson Ho - Economics</title>
-<meta name="description" content="Anson Ho is a senior economist at the Bank of Canada. Here you can find information about my research, CV, and the courses I taught. The views expressed on this website are mine. No responsibility for them should be attributed to the Bank of Canada." />
+<meta name="description" content="Anson Ho is an Assistant Professor in Ted Rogers School of Management at Ryerson University. Here you can find information about my research, CV, and the courses I taught. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations." />
 <meta name="keywords" content="Anson Ho, Anson T Y Ho, economics" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
@@ -206,7 +206,7 @@ var STYLE_PREFIX = 'wsite';
 
 <h2 class="wsite-content-title">Contact Information:<br /></h2>
 
-<div class="paragraph">E-mail: <span>&#65279;</span><a href="mailto:contact@atyho.info">contact@atyho.info</a><span>&#65279;</span><br />URL: <a href="http://www.atyho.info/">http://www.atyho.<span>&#65279;</span>info<span>&#65279;</span>/</a><br />Office: <span id="selectionBoundary_1484715306585_39007557492777223" style="line-height: 0; display: none;" class="rangySelectionBoundary">&#65279;</span>+1 (613) 782-7786<span id="selectionBoundary_1484715306583_0733575833430723" style="line-height: 0; display: none;" class="rangySelectionBoundary">&#65279;</span><br /></div>
+<div class="paragraph">E-mail: <span>&#65279;</span><a href="mailto:contact@atyho.info">contact@atyho.info</a><span>&#65279;</span><br />URL: <a href="http://www.atyho.info/">http://www.atyho.<span>&#65279;</span>info<span>&#65279;</span>/</a><br />Phone: <span id="selectionBoundary_1484715306585_39007557492777223" style="line-height: 0; display: none;" class="rangySelectionBoundary">&#65279;</span>+1 (416) 979-5000 Ext: 544589<span id="selectionBoundary_1484715306583_0733575833430723" style="line-height: 0; display: none;" class="rangySelectionBoundary">&#65279;</span><br /></div>
 
 
           
@@ -216,7 +216,7 @@ var STYLE_PREFIX = 'wsite';
 
 <h2 class="wsite-content-title">Mailing Address:<br /></h2>
 
-<div class="paragraph">Ted Rogers School of Business Management<br />Ryerson University<br />350 Victoria Street<br />Toronto, ON, M5B 2K3<br />Canada<br /></div>
+<div class="paragraph">Ted Rogers School of Management<br />Ryerson University<br />350 Victoria Street<br />Toronto, ON, M5B 2K3<br />Canada<br /></div>
 
 
           
