--- a/research.html
+++ b/research.html
@@ -181,22 +181,13 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:left;">
 
-&ldquo;We Didn't Start the Fire! The Effects of a Natural Disaster on Consumer Financial Distress,&rdquo; with Kim P. Huynh, David T. Jacho-Chavez, and Genevieve Vallee.
-<br /><br />
-  
-&ldquo;A Flexible Framework for Intervention Analysis Applied to Credit-Card Usage during the CoronavirusPandemic,&rdquo; with Lealand Morin, Harry J. Paarsch, and Kim P. Huynh.
+&ldquo;We Didn't Start the Fire! The Effects of a Natural Disaster on Consumer Financial Distress,&rdquo; with Kim P. Huynh, David T. Jacho-Chavez, and Genevieve Vallee. Revise & Resubmit.
 <br /><br />
   
 &ldquo;Don't Lend So Close to Me:  Payday Lending Spillover Effects on Formal Credit,&rdquo; with Sheisha Kulkarni, Sahil Raina, Barry Scholnick.
 <br /><br />
-  
-&ldquo;Identifying and Estimating Social Effects in a MultilayeredLinear-in-Means Model,&rdquo; with Alexandra Manta, Kim P. Huynh, and David T. Jacho-Chavez.
-<br /><br />
 
 &ldquo;<a target="_blank" href="https://ideas.repec.org/p/bca/bocawp/16-24.html">Housing and Tax-deferred Retirement Accounts</a>&rdquo; with Jie Zhou.
-<br /><br />
-
-&ldquo;Health Insurance and the College Premium&rdquo; with <a target="_blank" href="http://ideas.repec.org/e/ppo170.html">Linnea Polgreen</a>.
 <br /><br />
 
 &ldquo;<a target="_blank" href="tda_penalty.html">The Optimal Early-Withdrawal Penalty on Tax-deferred Saving Accounts</a>.&rdquo;
@@ -210,8 +201,11 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:left;">
   
-  &ldquo;<!--<a target="_blank" href="">-->Consumer Credit Usage in Canada during the Coronavirus Pandemic</a>,&rdquo; 
-  with Lealand Morin, Harry J. Paarsch, and <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>,<br /> 
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.spl.2021.109331">Estimating social effects in a multilayered Linear-in-Means model with network data</a>,&rdquo; with Alexandra Manta, Kim P. Huynh, and David T. Jacho-Chavez,<br />&emsp;<em>Statistics & Probability Letters</em>, vol. 183, April 2022.<br /><br />
+  
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.ijforecast.2021.12.012">A Flexible Framework for Intervention Analysis Applied to Credit-Card Usage during the Coronavirus Pandemic</a>,&rdquo; with Lealand Morin, Harry J. Paarsch, and Kim P. Huynh,<br />&emsp;<em>International Journal of Forecasting</em>, forthcoming.<br /><br />
+  
+  &ldquo;<a target="_blank" href="https://doi.org/10.1111/caje.12544">Consumer Credit Usage in Canada during the Coronavirus Pandemic</a>,&rdquo; with Lealand Morin, Harry J. Paarsch, and <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>,<br /> 
   &emsp;<em>Canadian Journal of Economics</em>, forthcoming.<br /><br />
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1108/S0731-905320200000042015">Interconnectedness through the Lens of Consumer Credit Markets</a>,&rdquo;<br />
