--- a/research.html
+++ b/research.html
@@ -180,9 +180,6 @@ var STYLE_PREFIX = 'wsite';
 <h2 class="wsite-content-title">Working Papers / Work-in-progress:<br /></h2>
 
 <div class="paragraph" style="text-align:left;">
-
-&ldquo;We Didn't Start the Fire! The Effects of a Natural Disaster on Consumer Financial Distress,&rdquo; with Kim P. Huynh, David T. Jacho-Chavez, and Genevieve Vallee. Revise & Resubmit.
-<br /><br />
   
 &ldquo;Don't Lend So Close to Me:  Payday Lending Spillover Effects on Formal Credit,&rdquo; with Sheisha Kulkarni, Sahil Raina, Barry Scholnick.
 <br /><br />
@@ -201,12 +198,15 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:left;">
   
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.jeem.2023.102790">We Didn't Start the Fire: Effects of a Natural Disaster on Consumer Financial Distress</a>,&rdquo; with Kim P. Huynh, David T. Jacho-Chavez, and Genevieve Vallee<br />&emsp;<em>Journal of Environmental Economics
+    and Management</em>, vol. 119, May 2023.<br /><br />
+
   &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.spl.2021.109331">Estimating social effects in a multilayered Linear-in-Means model with network data</a>,&rdquo; with Alexandra Manta, Kim P. Huynh, and David T. Jacho-Chavez,<br />&emsp;<em>Statistics & Probability Letters</em>, vol. 183, April 2022.<br /><br />
   
-  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.ijforecast.2021.12.012">A Flexible Framework for Intervention Analysis Applied to Credit-Card Usage during the Coronavirus Pandemic</a>,&rdquo; with Lealand Morin, Harry J. Paarsch, and Kim P. Huynh,<br />&emsp;<em>International Journal of Forecasting</em>, forthcoming.<br /><br />
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.ijforecast.2021.12.012">A Flexible Framework for Intervention Analysis Applied to Credit-Card Usage during the Coronavirus Pandemic</a>,&rdquo; with Lealand Morin, Harry J. Paarsch, and Kim P. Huynh,<br />&emsp;<em>International Journal of Forecasting</em>, vol. 38(3), pages 1129-1157, July-September 2022.<br /><br />
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1111/caje.12544">Consumer Credit Usage in Canada during the Coronavirus Pandemic</a>,&rdquo; with Lealand Morin, Harry J. Paarsch, and <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>,<br /> 
-  &emsp;<em>Canadian Journal of Economics</em>, forthcoming.<br /><br />
+  &emsp;<em>Canadian Journal of Economics</em>, vol. 55, pages 88-114, February, 2022.<br /><br />
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1108/S0731-905320200000042015">Interconnectedness through the Lens of Consumer Credit Markets</a>,&rdquo;<br />
   &emsp;<em>The Econometrics of Networks (Advances in Econometrics, Vol. 42)</em>, Emerald Publishing Limited, pages 315-333, October 2020.<br /><br /> 
