--- a/research.html
+++ b/research.html
@@ -198,52 +198,39 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:left;">
   
-  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.jeem.2023.102790">We Didn't Start the Fire: Effects of a Natural Disaster on Consumer Financial Distress</a>,&rdquo; with Kim P. Huynh, David T. Jacho-Chavez, and Genevieve Vallee<br />&emsp;<em>Journal of Environmental Economics
-    and Management</em>, vol. 119, May 2023.<br /><br />
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.jeem.2023.102790">We Didn't Start the Fire: Effects of a Natural Disaster on Consumer Financial Distress</a>,&rdquo; with Kim P. Huynh, David T. Jacho-Chavez, and Genevieve Vallee<br />&emsp;<em>Journal of Environmental Economics and Management</em>, vol. 119, May 2023.<br /><br />
 
-  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.spl.2021.109331">Estimating social effects in a multilayered Linear-in-Means model with network data</a>,&rdquo; with Alexandra Manta, Kim P. Huynh, and David T. Jacho-Chavez,<br />&emsp;<em>Statistics & Probability Letters</em>, vol. 183, April 2022.<br /><br />
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.spl.2021.109331">Estimating social effects in a multilayered Linear-in-Means model with network data</a>,&rdquo; with Alexandra Manta, Kim P. Huynh, and David T. Jacho-Chavez.<br />&emsp;<em>Statistics & Probability Letters</em>, vol. 183, April 2022.<br /><br />
   
-  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.ijforecast.2021.12.012">A Flexible Framework for Intervention Analysis Applied to Credit-Card Usage during the Coronavirus Pandemic</a>,&rdquo; with Lealand Morin, Harry J. Paarsch, and Kim P. Huynh,<br />&emsp;<em>International Journal of Forecasting</em>, vol. 38(3), pages 1129-1157, July-September 2022.<br /><br />
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.ijforecast.2021.12.012">A Flexible Framework for Intervention Analysis Applied to Credit-Card Usage during the Coronavirus Pandemic</a>,&rdquo; with Lealand Morin, Harry J. Paarsch, and Kim P. Huynh.<br />&emsp;<em>International Journal of Forecasting</em>, vol. 38(3), pages 1129-1157, July-September 2022.<br /><br />
   
-  &ldquo;<a target="_blank" href="https://doi.org/10.1111/caje.12544">Consumer Credit Usage in Canada during the Coronavirus Pandemic</a>,&rdquo; with Lealand Morin, Harry J. Paarsch, and <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>,<br /> 
+  &ldquo;<a target="_blank" href="https://doi.org/10.1111/caje.12544">Consumer Credit Usage in Canada during the Coronavirus Pandemic</a>,&rdquo; with Lealand Morin, Harry J. Paarsch, and <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>.<br /> 
   &emsp;<em>Canadian Journal of Economics</em>, vol. 55, pages 88-114, February, 2022.<br /><br />
   
-  &ldquo;<a target="_blank" href="https://doi.org/10.1108/S0731-905320200000042015">Interconnectedness through the Lens of Consumer Credit Markets</a>,&rdquo;<br />
-  &emsp;<em>The Econometrics of Networks (Advances in Econometrics, Vol. 42)</em>, Emerald Publishing Limited, pages 315-333, October 2020.<br /><br /> 
+  &ldquo;<a target="_blank" href="https://doi.org/10.1108/S0731-905320200000042015">Interconnectedness through the Lens of Consumer Credit Markets</a>.&rdquo;<br />&emsp;<em>The Econometrics of Networks (Advances in Econometrics, Vol. 42)</em>, Emerald Publishing Limited, pages 315-333, October 2020.<br /><br /> 
   
-  &ldquo;<a target="_blank" href="https://doi.org/10.1515/jem-2020-0012">Econometrics Pedagogy and Cloud Computing:  Training the Next Generation of Economists and Data Scientists</a>,&rdquo; 
-  with Danielle V. Handel, <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>, <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>, and Carson H. Rea,<br />
+  &ldquo;<a target="_blank" href="https://doi.org/10.1515/jem-2020-0012">Econometrics Pedagogy and Cloud Computing: Training the Next Generation of Economists and Data Scientists</a>,&rdquo; with Danielle V. Handel, <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>, <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>, and Carson H. Rea.<br />
   &emsp;<em>Journal of Econometric Methods</em>, vol. 10(1), pages 89–102, October, 2020.<br /><br />
   
-  &ldquo;<a target="_blank" href="https://doi.org/10.1353/eco.2019.0009">Productivity, Reallocation, and Distortions:  Evidence from Firm-Level Data</a>,&rdquo; 
-  with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>,<br />
-  &emsp;<em>Economia – Journal of LACEA</em>, vol. 20(1), pages 83-110, October 2019.<br /><br />
+  &ldquo;<a target="_blank" href="https://doi.org/10.1353/eco.2019.0009">Productivity, Reallocation, and Distortions: Evidence from Firm-Level Data</a>,&rdquo; 
+  with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>.<br /> &emsp;<em>Economia – Journal of LACEA</em>, vol. 20(1), pages 83-110, October 2019.<br /><br />
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.eneco.2018.05.022">Using Nonparametric Copulas to Measure Crude Oil Price Co-movements</a>,&rdquo; 
-  with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>,<br />
-  &emsp;<em>Energy Economics</em>, vol. 82 pages 211-223, August 2019.<br /><br />
+  with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>.<br /> &emsp;<em>Energy Economics</em>, vol. 82 pages 211-223, August 2019.<br /><br />
   
-  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.euroecorev.2017.04.008">Tax-deferred Saving Accounts: Heterogeneity and Policy Reforms</a>,&rdquo; <br />
-  &emsp;<em>European Economic Review</em>, vol. 97, pages 26-41, August 2017.<br /><br />
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.euroecorev.2017.04.008">Tax-deferred Saving Accounts: Heterogeneity and Policy Reforms</a>.&rdquo; <br /> &emsp;<em>European Economic Review</em>, vol. 97, pages 26-41, August 2017.<br /><br />
   
   &ldquo;<a href="http://ubplj.org/index.php/jpm/article/view/1162">Prediction Market for Disease Surveillance: A Case Study of Influenza Activity</a>,&rdquo; 
-  with <a target="_blank" href="https://medicine.uiowa.edu/internalmedicine/immunology/profile/philip-polgreen">Philip M. Polgreen</a> and Tim Prendergast,<br /> 
-  &emsp;<em>Journal of Prediction Markets</em>, vol. 10(1), pages 68-82, October 2016.<br /><br />
+  with <a target="_blank" href="https://medicine.uiowa.edu/internalmedicine/immunology/profile/philip-polgreen">Philip M. Polgreen</a> and Tim Prendergast.<br /> &emsp;<em>Journal of Prediction Markets</em>, vol. 10(1), pages 68-82, October 2016.<br /><br />
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1007/978-3-319-23228-7_7">Analysing Labour Productivity in Ecuador</a>,&rdquo; 
-  with <a target="_blank" href="https://ideas.repec.org/e/pcu109.html">German Cubas</a>, <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>,<br />
-  &emsp;<em>Productivity and Efficiency Analysis</em>, Chapter 7, pages 109-117, 2016. Springer ISBN 978-3-319-23228-7.<br /><br />
+  with <a target="_blank" href="https://ideas.repec.org/e/pcu109.html">German Cubas</a>, <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>.<br /> &emsp;<em>Productivity and Efficiency Analysis</em>, Chapter 7, pages 109-117, 2016. Springer ISBN 978-3-319-23228-7.<br /><br />
   
-  &ldquo;<a target="_blank" href="https://ideas.repec.org/a/wly/japmet/v31y2016i3p603-610.html">Flexible Estimation of Copulas: An Application to the U.S. Housing Crisis</a>,&rdquo; 
-  with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>,<br />
-  &emsp;<em>Journal of Applied Econometrics</em>, vol. 31(3), pages 603-610, April 2016.<br /><br />
+  &ldquo;<a target="_blank" href="https://ideas.repec.org/a/wly/japmet/v31y2016i3p603-610.html">Flexible Estimation of Copulas: An Application to the U.S. Housing Crisis</a>,&rdquo; with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>.<br /> &emsp;<em>Journal of Applied Econometrics</em>, vol. 31(3), pages 603-610, April 2016.<br /><br />
   
-  &ldquo;<a target="_blank" href="https://ideas.repec.org/a/wly/japmet/v29y2014i2p348-352.html">crs: A Package for Nonparametric Splines Estimation in R</a>,&rdquo; with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>,<br />
-  &emsp;<em>Journal of Applied Econometrics</em>, vol. 29(2), pages 348-352, March 2014.<br /><br />
+  &ldquo;<a target="_blank" href="https://ideas.repec.org/a/wly/japmet/v29y2014i2p348-352.html">crs: A Package for Nonparametric Splines Estimation in R</a>,&rdquo; with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>.<br /> &emsp;<em>Journal of Applied Econometrics</em>, vol. 29(2), pages 348-352, March 2014.<br /><br />
   
-  &ldquo;<a target="_blank" href="https://ideas.repec.org/a/wly/japmet/v26y2011i2p344-349.html">npRmpi: A Package for Parallel Distributed Kernel Estimation in R</a>,&rdquo; 
-  with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>,<br />
-  &emsp;<em>Journal of Applied Econometrics</em>, vol. 26(2), pages 344-349, March 2011.<br />
+  &ldquo;<a target="_blank" href="https://ideas.repec.org/a/wly/japmet/v26y2011i2p344-349.html">npRmpi: A Package for Parallel Distributed Kernel Estimation in R</a>,&rdquo; with <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a> and <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>.<br /> &emsp;<em>Journal of Applied Econometrics</em>, vol. 26(2), pages 344-349, March 2011.<br />
 
   </div>
 
