--- a/research.html
+++ b/research.html
@@ -198,7 +198,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:left;">
   
-  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.jeem.2023.102790">We Didn't Start the Fire: Effects of a Natural Disaster on Consumer Financial Distress</a>,&rdquo; with Kim P. Huynh, David T. Jacho-Chavez, and Genevieve Vallee<br />&emsp;<em>Journal of Environmental Economics and Management</em>, vol. 119, May 2023.<br /><br />
+  &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.jeem.2023.102790">We Didn't Start the Fire: Effects of a Natural Disaster on Consumer Financial Distress</a>,&rdquo; with Kim P. Huynh, David T. Jacho-Chavez, and Genevieve Vallee.<br /> &emsp;<em>Journal of Environmental Economics and Management</em>, vol. 119, May 2023.<br /><br />
 
   &ldquo;<a target="_blank" href="https://doi.org/10.1016/j.spl.2021.109331">Estimating social effects in a multilayered Linear-in-Means model with network data</a>,&rdquo; with Alexandra Manta, Kim P. Huynh, and David T. Jacho-Chavez.<br />&emsp;<em>Statistics & Probability Letters</em>, vol. 183, April 2022.<br /><br />
   
