--- a/research.html
+++ b/research.html
@@ -173,7 +173,7 @@ var STYLE_PREFIX = 'wsite';
       <div id="wsite-content" class="wsite-elements wsite-not-footer">
   <h2 class="wsite-content-title">Research Interests:<br /></h2>
 
-<div class="paragraph">Macroeconomics, Savings, Taxation, Development, Firm Dynamics, Applied econometrics</div>
+<div class="paragraph">Household Finance, Macroeconomics, Applied Econometrics, Big Data</div>
 
 <div class="wsite-spacer" style="height:10px;"></div>
 
@@ -236,7 +236,7 @@ var STYLE_PREFIX = 'wsite';
   &emsp;<em>Journal of Applied Econometrics</em>, vol. 26(2), pages 344-349, March 2011.<br />
 
   </div>
-  
+
   <div class="wsite-spacer" style="height:10px;"></div>
 
   <h2 class="wsite-content-title">Working Papers / Work-in-progress:<br /></h2>
