--- a/research.html
+++ b/research.html
@@ -198,7 +198,7 @@ var STYLE_PREFIX = 'wsite';
   &emsp;<em>Canadian Journal of Economics</em>, vol. 55, pages 88-114, February, 2022.<br /><br />
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1108/S0731-905320200000042015">Interconnectedness through the Lens of Consumer Credit Markets</a>.&rdquo;<br />
-  &emsp;<em>The Econometrics of Networks (Advances in Econometrics, Vol. 42)</em>, Emerald Publishing Limited, pages 315-333, October 2020.<br /><br /> 
+  &emsp;<em>The Econometrics of Networks (Advances in Econometrics, Vol. 42)</em>, pages 315-333, October 2020.<br /><br /> 
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1515/jem-2020-0012">Econometrics Pedagogy and Cloud Computing: Training the Next Generation of Economists and Data Scientists</a>,&rdquo;<br />
   &emsp;with Danielle V. Handel, <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>, <a target="_blank" href="http://userwww.service.emory.edu/%7Edjachoc/">David T. Jacho-Chavez</a>, and Carson H. Rea.<br />
