--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Anson Ho - Economics</title>
-<meta name="description" content="Anson Ho is an Assistant Professor in Ted Rogers School of Management at Toronto Metropolitan University (formerly Ryerson University). Here you can find information about my research, CV, and the courses I taught. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations." />
+<meta name="description" content="Anson Ho is an Assistant Professor in Ted Rogers School of Management at Toronto Metropolitan University (formerly Ryerson). Here you can find information about my research, CV, and the courses I taught. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations." />
 <meta name="keywords" content="Anson Ho, Anson T Y Ho, economics" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
