--- a/research.html
+++ b/research.html
@@ -173,7 +173,7 @@ var STYLE_PREFIX = 'wsite';
       <div id="wsite-content" class="wsite-elements wsite-not-footer">
   <h2 class="wsite-content-title">Research Interests:<br /></h2>
 
-<div class="paragraph">Household Finance, Macroeconomics, Applied Econometrics, Big Data</div>
+<div class="paragraph">Household Finance, Macroeconomics, Applied Econometrics, Big Data Analysis</div>
 
 <div class="wsite-spacer" style="height:10px;"></div>
 
@@ -196,6 +196,10 @@ var STYLE_PREFIX = 'wsite';
   &ldquo;<a target="_blank" href="https://doi.org/10.1111/caje.12544">Consumer Credit Usage in Canada during the Coronavirus Pandemic</a>,&rdquo;<br />
   &emsp;with Lealand Morin, Harry J. Paarsch, and <a target="_blank" href="http://mypage.iu.edu/%7Ekphuynh/">Kim P. Huynh</a>.<br /> 
   &emsp;<em>Canadian Journal of Economics</em>, vol. 55, pages 88-114, February, 2022.<br /><br />
+
+  &ldquo;<a target="_blank" href="http://dx.doi.org/10.18637/jss.v098.s01">Data Science in Stata 16: Frames, Lasso, and Python Integration</a>,&rdquo;<br />
+  &emsp;with Kim P. Huynh, David T. Jacho-Chavez, and Diego Rojas-Baez</a>.<br /> 
+  &emsp;<em>Journal of Statistical Software</em>, vol. 98, pages 1-9, May, 2021.<br /><br />
   
   &ldquo;<a target="_blank" href="https://doi.org/10.1108/S0731-905320200000042015">Interconnectedness through the Lens of Consumer Credit Markets</a>.&rdquo;<br />
   &emsp;<em>The Econometrics of Networks (Advances in Econometrics, Vol. 42)</em>, pages 315-333, October 2020.<br /><br /> 
@@ -243,8 +247,6 @@ var STYLE_PREFIX = 'wsite';
   
   <div class="paragraph" style="text-align:left;">
     
-  &ldquo;Don't Lend So Close to Me:  Payday Lending Spillover Effects on Formal Credit,&rdquo; with Sheisha Kulkarni, Sahil Raina, Barry Scholnick.
-  <br /><br />
   
   &ldquo;<a target="_blank" href="https://ideas.repec.org/p/bca/bocawp/16-24.html">Housing and Tax-deferred Retirement Accounts</a>&rdquo; with Jie Zhou.
   <br /><br />
