--- a/research.html
+++ b/research.html
@@ -246,9 +246,20 @@ var STYLE_PREFIX = 'wsite';
   <h2 class="wsite-content-title">Working Papers / Work-in-progress:<br /></h2>
   
   <div class="paragraph" style="text-align:left;">
-    
-  
-  &ldquo;<a target="_blank" href="https://ideas.repec.org/p/bca/bocawp/16-24.html">Housing and Tax-deferred Retirement Accounts</a>&rdquo; with Jie Zhou.
+	  
+  &ldquo;The Effect of Macroeconomic Shock on Mortgage Delinquency: A Case Study of Oil Shock in Canada,&rdquo; with Meet Shah, working paper.
+  <br /><br />    
+
+  &ldquo;Debt Repayment and the Slow Wealth Draw Down of Older Adults,&rdquo; with Barbara Boggiano, Barry Scholnick and Kim P. Huynh, working paper.
+  <br /><br />
+
+  &ldquo;Interdependence of Renewable Energy in the North American Market: A Copula Approach,&rdquo; with Kim P. Huynh and Marcel Voia, work-in-progress.
+  <br /><br />
+
+  &ldquo;The Impacts of Mortgage Policy Reforms on Households’ Life-cycle Housing Decisions.&rdquo;
+  <br /><br />
+
+  &ldquo;<a target="_blank" href="https://ideas.repec.org/p/bca/bocawp/16-24.html">Housing and Tax-deferred Retirement Accounts,</a>&rdquo; with Jie Zhou.
   <br /><br />
   
   &ldquo;<a target="_blank" href="tda_penalty.html">The Optimal Early-Withdrawal Penalty on Tax-deferred Saving Accounts</a>.&rdquo;
