--- a/project_page.html
+++ b/project_page.html
@@ -191,21 +191,23 @@ var STYLE_PREFIX = 'wsite';
   </div>
 </div>
 
-<!-- Start of SC Code -->
+<!-- Default Statcounter code for Anson Ho - Economics
+https://www.atyho.info/ -->
 <script type="text/javascript">
 var sc_project=5728798; 
 var sc_invisible=1; 
 var sc_security="5ac5c1c6"; 
 </script>
-
 <script type="text/javascript"
-src="http://www.statcounter.com/counter/counter.js"></script><noscript><div
-class="statcounter"><a title="statistics for vBulletin"
-href="http://statcounter.com/vbulletin/"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics
+Made Easy - Statcounter" href="https://statcounter.com/"
 target="_blank"><img class="statcounter"
-src="http://c.statcounter.com/5728798/0/5ac5c1c6/1/"
-alt="statistics for vBulletin" ></a></div></noscript>
-<!-- End of SC Code -->
+src="https://c.statcounter.com/5728798/0/5ac5c1c6/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 
   </body>
 </html>
