--- a/npvcopula.html
+++ b/npvcopula.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z84B7GYDCY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z84B7GYDCY');
+</script>
+
     <title>Tail Dependence of Consumer Debt Defaults: A Non-parametric Vine Copula Approach - Anson Ho</title>
 <meta name="description" content="This paper shows that the optimal early withdrawal penalty rate is 50.4%, which is substantially higher than the 10% in the current regulation. Adopting the optimal penalty rate will obtain a welfare gain equivalent to a 2.16% increase in per period consumption. A reform with income-dependent early withdrawal penalty will improve welfare equivalent to a 2.90% increase in per period consumption." />
 <meta name="keywords" content="retirement, savings, tax-deferred savings accounts, hyperbolic discounting" />
