--- a/project_page.html
+++ b/project_page.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z84B7GYDCY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z84B7GYDCY');
+</script>
+
     <title>Research Title - Anson Ho</title>
 <meta name="description" content="Research description" />
 <meta name="keywords" content="keywords" />
