--- a/teaching.html
+++ b/teaching.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Teaching - Anson Ho</title>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z84B7GYDCY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-Z84B7GYDCY');
+</script>
+
+	<title>Anson Ho - Teaching</title>
+<meta name="description" content="Anson Ho is an Assistant Professor in Ted Rogers School of Management at Toronto Metropolitan University (formerly Ryerson). Here you can find information about my research, CV, and the courses I taught. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations." />
+<meta name="keywords" content="Anson Ho, Anson T Y Ho, economics" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 		
-		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/sites.css?buildTime=1234" />
+	<link id="wsite-base-style" rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/sites.css?buildTime=1234" />
 <link rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/old/fancybox.css?1234" />
 <link rel="stylesheet" type="text/css" href="files/main_style.css?1620834277" title="wsite-theme-css" />
 
