--- a/research.html
+++ b/research.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Research - Anson Ho</title>
+	  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z84B7GYDCY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-Z84B7GYDCY');
+</script>
 
+    <title>Anson Ho - Research</title>
+<meta name="description" content="Anson Ho is an Assistant Professor in Ted Rogers School of Management at Toronto Metropolitan University (formerly Ryerson). Here you can find information about my research, CV, and the courses I taught. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations." />
+<meta name="keywords" content="Anson Ho, Anson T Y Ho, economics" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
     
