--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
 	  
     <title>Anson Ho - Economics</title>
-<meta name="description" content="Anson Ho is an Assistant Professor in Ted Rogers School of Management at Toronto Metropolitan University (formerly Ryerson). Here you can find information about my research, CV, and the courses I taught. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations." />
+<meta name="description" content="Anson Ho is an Associate Professor in Ted Rogers School of Management at Toronto Metropolitan University (formerly Ryerson). Here you can find information about my research, CV, and the courses I taught. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations." />
 <meta name="keywords" content="Anson Ho, Anson T Y Ho, economics" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
@@ -203,7 +203,7 @@ var STYLE_PREFIX = 'wsite';
           
             
 
-<div class="paragraph" style="text-align:left;">Welcome to my website. I am an Assistant Professor in <a href="https://www.ryerson.ca/tedrogersschool/business-management/majors/real-estate-management/faculty/anson-ho/">Ted Rogers School of Management</a> at Toronto Metropolitan University (<a href="https://www.ryerson.ca/next-chapter/">formerly Ryerson University</a>). Here you can find information about my research, CV, and the courses I taught. I am also an external academic consultant in the <a href="https://www.bankofcanada.ca/profile/anson-t-y-ho/">Financial System Research Centre of the Bank of Canada</a>. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations.</div>
+<div class="paragraph" style="text-align:left;">Welcome to my website. I am an Associate Professor at <a href="https://www.ryerson.ca/tedrogersschool/business-management/majors/real-estate-management/faculty/anson-ho/">Ted Rogers School of Management</a> of Toronto Metropolitan University (<a href="https://www.ryerson.ca/next-chapter/">formerly Ryerson University</a>). Here you can find information about my research, CV, and the courses I taught. I am also an external academic consultant in the <a href="https://www.bankofcanada.ca/profile/anson-t-y-ho/">Financial System Research Centre of the Bank of Canada</a>. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations.</div>
 
 <div class="wsite-spacer" style="height:10px;"></div>
 
