--- a/research.html
+++ b/research.html
@@ -258,13 +258,13 @@ var STYLE_PREFIX = 'wsite';
   
   <div class="paragraph" style="text-align:left;">
 	  
+  &ldquo;Walk Down to Electric Avenue: Risk Management of Interdependence of Renewable Energy in the North American Market,&rdquo; with Kim P. Huynh and Marcel Voia, working paper.
+  <br /><br />
+  
   &ldquo;The Effect of Macroeconomic Shock on Mortgage Delinquency: A Case Study of Oil Shock in Canada,&rdquo; with Meet Shah, working paper.
   <br /><br />    
 
   &ldquo;Debt Repayment and the Slow Wealth Draw Down of Older Adults,&rdquo; with Barbara Boggiano, Barry Scholnick and Kim P. Huynh, working paper.
-  <br /><br />
-
-  &ldquo;Interdependence of Renewable Energy in the North American Market: A Copula Approach,&rdquo; with Kim P. Huynh and Marcel Voia, work-in-progress.
   <br /><br />
 
   &ldquo;The Impacts of Mortgage Policy Reforms on Households’ Life-cycle Housing Decisions.&rdquo;
