--- a/research.html
+++ b/research.html
@@ -258,7 +258,8 @@ var STYLE_PREFIX = 'wsite';
   
   <div class="paragraph" style="text-align:left;">
 	  
-  &ldquo;Walk Down to Electric Avenue: Risk Management of Interdependence of Renewable Energy in the North American Market,&rdquo; with Kim P. Huynh and Marcel Voia, working paper.
+  &ldquo;Walk Down to Electric Avenue: Risk Management of Interdependence of Renewable Energy in the North American Market,&rdquo;<br />
+  &emsp;with Kim P. Huynh and Marcel Voia, working paper.
   <br /><br />
   
   &ldquo;The Effect of Macroeconomic Shock on Mortgage Delinquency: A Case Study of Oil Shock in Canada,&rdquo; with Meet Shah, working paper.
