--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ var STYLE_PREFIX = 'wsite';
 
 <h2 class="wsite-content-title">Contact Information:<br /></h2>
 
-<div class="paragraph">E-mail: <span>&#65279;</span><a href="mailto:contact@atyho.info">contact@atyho.info</a><span>&#65279;</span><br />URL: <a href="http://www.atyho.info/">http://www.atyho.<span>&#65279;</span>info<span>&#65279;</span>/</a><br />Phone: <span id="selectionBoundary_1484715306585_39007557492777223" style="line-height: 0; display: none;" class="rangySelectionBoundary">&#65279;</span>+1 (416) 979-5000 Ext: 544589<span id="selectionBoundary_1484715306583_0733575833430723" style="line-height: 0; display: none;" class="rangySelectionBoundary">&#65279;</span><br /></div>
+<div class="paragraph">E-mail: <span>&#65279;</span><a href="mailto:contact@atyho.info">contact@atyho.info</a><span>&#65279;</span><br />URL: <a href="https://www.atyho.info/">http://www.atyho.<span>&#65279;</span>info<span>&#65279;</span>/</a><br />Phone: <span id="selectionBoundary_1484715306585_39007557492777223" style="line-height: 0; display: none;" class="rangySelectionBoundary">&#65279;</span>+1 (416) 979-5000 Ext: 544589<span id="selectionBoundary_1484715306583_0733575833430723" style="line-height: 0; display: none;" class="rangySelectionBoundary">&#65279;</span><br /></div>
 
 
           
