--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ var STYLE_PREFIX = 'wsite';
           
             
 
-<div class="paragraph" style="text-align:left;">Welcome to my website. I am an Associate Professor at <a href="https://www.ryerson.ca/tedrogersschool/business-management/majors/real-estate-management/faculty/anson-ho/">Ted Rogers School of Management</a> of Toronto Metropolitan University (<a href="https://www.ryerson.ca/next-chapter/">formerly Ryerson University</a>). Here you can find information about my research, CV, and the courses I taught. I am also an external academic consultant in the <a href="https://www.bankofcanada.ca/profile/anson-t-y-ho/">Financial System Research Centre of the Bank of Canada</a>. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations.</div>
+<div class="paragraph" style="text-align:left;">Welcome to my website. I am an Associate Professor at <a href="https://www.ryerson.ca/tedrogersschool/business-management/majors/real-estate-management/faculty/anson-ho/">Ted Rogers School of Management</a> of Toronto Metropolitan University (<a href="https://www.ryerson.ca/next-chapter/">formerly Ryerson University</a>). Here you can find information about my research, CV, and the courses I taught. I am also an external academic consultant at the <a href="https://www.bankofcanada.ca/profile/anson-t-y-ho/">Financial System Research Centre of the Bank of Canada</a>. The views expressed on this website are mine. No responsibility for them should be attributed to my affiliated organizations.</div>
 
 <div class="wsite-spacer" style="height:10px;"></div>
 
